test/negative/type_struct_field_ty_is_type.cg
// v0.0.23: constructed runtime structs must not use `type` as a field type.

fn Bad(comptime T: type) -> type {
    let fields = [
        builtin::StructField{
            name: "x",
            ty: T,
            vis: builtin::Vis::Pub,
        },
    ];

    let desc = builtin::StructDesc{
        name: "Bad",
        repr: builtin::StructRepr::Cog,
        fields: &fields,
    };

    builtin::type_struct(desc)
}

type X = Bad(type);

fn takes_x(_x: X) -> () {
}

fn main() -> i32 {
    0
}
